# ss_segmentation

./: CMakeLists.txt  README.md  package.xml  semantic_segmentation.launch  setup.py
nodes/: ss_inference
src/ss_segmentation/: README.md
src/ss_segmentation/config/: SS_config_batch_inference.py  SS_config_train.py
src/ss_segmentation/inference/: SS_batch_inference_directory.py
src/ss_segmentation/train/: SS_data_definition.py  SS_train_network.py
src/ss_segmentation/utils/: plot_ss_segmentation_data.m
